k8s/services/demo/rest2/manifests/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "rest2"
  namespace: "default"
  labels:
    app: "rest2"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "rest2"
  template:
    metadata:
      labels:
        app: "rest2"
    spec:
      containers:
      - name: "rest2"
        image: "ghcr.io/gasilva-clgx/rest2:latest"
        ports:
          - containerPort: 3000
