k8s/services/demo/rest2/manifests/clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: rest2-svc
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: rest2
  type: ClusterIP
