k8s/services/demo/rest2/manifests/loadBalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rest2-service
spec:
  selector:
    app: rest2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: LoadBalancer
