k8s/services/demo/rest2/manifests/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest2-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: rest2.demo.dev.psilva.org
    http:
      paths:
      - backend:
          service:
            name: rest2-svc
            port:
              number: 3001
        path: /
        pathType: Prefix
